tests/integration/run-pass/function-single-params-simple-update.casm
function x : Int -> Int

init main

rule main = { 
    x := 1 + 1
    program( self ) := undef
}
