tests/integration/compile-fail/definitions-function-defined-multiple-times.casm
function x : -> Int

init main

rule main = {
    x := 1
}

function x : -> Int  //~ redefinition of symbol
